--- a/_posts/2020-05-22-paul.md
+++ b/_posts/2020-05-22-paul.md
@@ -1,7 +1,9 @@
 ---
 layout: post
-title: "Test"
+title: "Test Post"
 date: 2020-05-22
 ---
 
 Well. Finally got around to putting this old website together. Neat thing about it - powered by [Jekyll](http://jekyllrb.com) and I can use Markdown to author my posts. It actually is a lot easier than I thought it was going to be.
+
+Update: Paul update
