--- a/_posts/2021-02-14-WeekNotes W6 2021.md
+++ b/_posts/2021-02-14-WeekNotes W6 2021.md
@@ -14,12 +14,14 @@ This week I have been mostly :-
 
 * I'm using [NodeRed](https://nodered.org/) to automate the generation of [Obsidian](obsidian.md) Notes.  So far this is limited to taking research notes from Pocket (specifically tagged) and generating links in an Obsidian file, and generating a daily note with the agenda from my Google Calendar.  
 * Enjoyed the first cricket test match between India and England
-* In a collaboration with Microsoft, I'm trying to create a build pipeline for our work systems in Azure DevOps
-* Tuesday was a really heavy snow day and Tesco cancelled their home delivery. It was okay though, we can rebook.  Which is not so okay because all the slots are filled for the next two weeks.   G had to walk to school and then there were only a couple of kids in.  The school should have been shut for the day
-* Doing an hour a day learning JavaScipt (it's about time I got into some front end development)
+* Collaborating with Microsoft, I'm trying to create a build pipeline for our work systems in Azure DevOps
+* Lots of snow overnight Tuesday and Tesco cancelled their home delivery. It was okay though, we can rebook.  Which is not so okay because all the slots are filled for the next two weeks. This is sub-optimal in a pandemic.
+* The snow on Wednesday was even heavier and our road was blocked.  G had to walk to school and then there were only a couple of kids in.  The school should have been shut for the day
+* Doing an hour a day learning JavaScript (it's about time I got into some front end development)
 * Did not enjoy the 6 Nations match between Scotland and Wales.
 * My first car drive for quite a while as I had to take my bike back to the shop
-* Completed the Tour De Zwift on Sunday as the snow starts to melt.
+* Completed the [Tour De Zwift](https://www.zwift.com/tour-de-zwift/ride) on Sunday.  The snow is starting to melt, and the days are getting brighter so hoping to get outside on the bike next week.
+* On Saturday, the weather was bright and sunny.  Really didn't feel like training but did want to get outside. Thought I'd go for a hike, but [I'll just wear my running stuff](https://www.strava.com/activities/4779071779) so I can get to the hill quicker. Of course once your out, you've beaten that voice in your head and your doing a workout.
 * We seem to have a blocked pipe somewhere; it is probably frozen and I hope it will clear by itself as temperatures are set to rise significantly this week.
 
 ## Links
